Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-118746

Japanese input on macOS regressed in Qt 6.5.3

XMLWordPrintable

    • macOS
    • c9550388b (dev), 266c9a560 (6.7), fe6dc77fe (6.6), 3ff1f50bf (6.5)

      Reproduction steps:

      • Open the markdown editor example
      • Switch to Japanese keyboard input
      • On the left, type 'taberu', then press down a few times. Notice how the text you input changes as you cursor down.
      • In English, type <input> so you can enter something into webengine on the right.
      • Enter taberu on the right and cursor down. Notice how the input text gets blanked out.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt_webengine_team Qt WebEngine Team
            qtdae2 Damien Elmes
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes